force-app/main/default/objects/Lead/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Disaster_Relief_Funding</fullName>
            </value>
            <value>
                <fullName>In_Kind_Goods</fullName>
            </value>
            <value>
                <fullName>Long_Term_Partnership</fullName>
            </value>
            <value>
                <fullName>Volunteer_Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>