force-app/main/default/objects/Lead/fields/Estimated_Contribution_Range__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contribution_Range__c</fullName>
    <label>Estimated Contribution Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under_5K</fullName>
            </value>
            <value>
                <fullName>5K_25K</fullName>
            </value>
            <value>
                <fullName>25K_100K</fullName>
            </value>
            <value>
                <fullName>100K_Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>