force-app/main/default/objects/Lead/fields/Lead_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Name__c</fullName>
    <description>Display Lead Owner&apos;s Name</description>
    <formula>IF(
  ISBLANK(Owner:User.Id), 
  Owner:Queue.QueueName, 
  Owner:User.FirstName
)</formula>
    <label>Lead Owner Name</label>
    <type>Text</type>
</CustomField>