force-app/main/default/objects/Lead/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corporate_Donor</fullName>
            </value>
            <value>
                <fullName>Government_Agency</fullName>
            </value>
            <value>
                <fullName>Individual_Major_Donor</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>