force-app/main/default/objects/Lead/fields/Referred_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>